# fito

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: #main.rs#  .#main.rs  clip.rs  compare.rs  find.rs  lib.rs  main.rs  mirror.rs  show.rs
