[package]
name = "fitx"
description = "Fitx (File System Toolbox) is a library and a command program that features a toolbox with a series of file system functionalities."
repository = "https://github.com/emuvi/fitx"
authors = ["Éverton M. Vieira"]
license = "LGPL-3.0-only"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "3", features = ["cargo"] }
regex = "1"
rubx = { path = "../rubx" }
